<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="club.hellomiao.passwordhelper.MainActivity" >

    <TextView
        android:id="@+id/textView_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/copyright"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/textView_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/main_slogan" />

    <TextView
        android:id="@+id/textView_enterpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/enterpsw"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editText_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enterpsw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/pew_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_psw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/confirmpsw" />

</RelativeLayout>